--- a/gfarm_v2/trunk/man/man1/gfservice.1
+++ b/gfarm_v2/trunk/man/man1/gfservice.1
@@ -3,13 +3,13 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSERVICE" "1" "16 3月 2012" "Gfarm" ""
+.TH "GFSERVICE" "1" "23 March 2012" "Gfarm" ""
 
 .SH NAME
 gfservice \- control Gfarm servers from a remote host
 .SH SYNOPSIS
 
-\fBgfservice\fR [ \fB\fIoptions\fB\fR ] \fBsub-command\fR \fBhost-id\fR [ \fB\fIarguments\fB\fR ]
+\fBgfservice\fR [ \fB\fIoptions\fB\fR ] \fBsub-command\fR \fBhost-id\fR [ \fB\fIargument ...\fB\fR ]
 
 .SH "DESCRIPTION"
 .PP
@@ -48,7 +48,7 @@ Here is an example of the configuration file:
 .fi
 .PP
 \fBgfservice\fR determines a path of the configuration
-file to be read in the following order:
+file to be read with the following procedures:
 .TP 3
 1. 
 \fB-f\fR \fIfile\fR option is specified, read
@@ -105,7 +105,7 @@ Print debug information.
 Read configuration from \fIfile\fR instead of the default.
 .TP
 \fB-t \fItime\fB\fR
-Set operation timeout in \fItime\fR\&.
+Set operation timeout in \fItime\fR seconds.
 When \fBgfservice\fR tries to start or stop a server program
 (gfmd, gfsd or a backend database), it waits until the operation is complete
 or \fItime\fR interval is elapsed.
@@ -224,7 +224,7 @@ deletes it and then add a new line.
 \fBunset-gfmd-conf \fIdirective\fB\fR
 Delete a \fIdirective\fR line in
 \fIgfmd.conf\fR file on the remote host.
-If \fIgfmd.conf\fR file on the remote host doesn't contain
+If \fIgfmd.conf\fR file doesn't contain
 \fIdirective\fR line, the file is unchanged.
 .TP
 \fBbackup-backend-db\fR
@@ -280,7 +280,7 @@ gfsd\fIn\fR and client\fIn\fR).
 \fBunconfig-gfarm\fR
 Execute "\fBstop-gfarm\fR" sub-command and then delete all
 files and directories created by gfmd and a backend database.
-If you want to unconfigure a slave gfmd only, use
+If you want to unconfigure a slave gfmd, use
 "\fBunconfig-gfarm-slave\fR" sub-command instead.
 .TP
 \fBunconfig-gfarm-master\fR
@@ -348,7 +348,7 @@ The argument \fIoption\fR is an option to
 Unmount a Gfarm2 filesystem on \fIdirectory\fR on the
 remote host.
 .TP
-\fBumount\fR
+\fBumount \fIdirectory\fB\fR
 An alias of "\fBunmount\fR" sub-command.
 .TP
 \fBset-gfarm-conf \fIdirective\fB \fIvalue\fB\fR
@@ -366,11 +366,11 @@ deletes it and then add a new line.
 \fBunset-gfarm-conf \fIdirective\fB\fR
 Delete a \fIdirective\fR line in
 \fIgfarm2.conf\fR file on the remote host.
-If \fIgfarm2.conf\fR file on the remote host doesn't contain
+If \fIgfarm2.conf\fR file doesn't contain
 \fIdirective\fR line, the file is unchanged.
 .TP
 \fBbackup-gfarm-conf\fR
-Output \fIgfarm2.conf\fR on the remote host file to
+Output \fIgfarm2.conf\fR file on the remote host to
 standard out.
 .TP
 \fBbackup-shared-key\fR
@@ -387,7 +387,9 @@ Recover a shared secret key file on the remote host.
 standard in.
 .TP
 \fBconfig-client\fR
-Copy \fIgfarm2.conf\fR file from gfmd1 to the client host.
+Copy \fIgfarm2.conf\fR file and a shared secret key file
+from gfmd1 to the client host.
 .TP
 \fBunconfig-client\fR
-Delete \fIgfarm2.conf\fR file on the remote host.
+Delete \fIgfarm2.conf\fR file and a shared secret key file
+on the remote host.
