--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1283,14 +1283,14 @@ The "disable" setting corresponds to "noatime" setting in usual filesystem.
 </varlistentry>
 
 <varlistentry>
-<term><token>client_parallel_copy_default</token> <parameter>num-of-parallel</parameter></term>
+<term><token>client_parallel_copy</token> <parameter>num-of-parallel</parameter></term>
 <listitem>
-<para>This directive specifies the default number of parallel for <command>gfprep</command> and <command>gfpcopy</command> to work in parallel.
+<para>This directive specifies the number of parallel for <command>gfprep</command> and <command>gfpcopy</command> to work in parallel.
 When this number is not specified, the default number of parallel is 4.
 </para>
 <para>For example,</para>
 <literallayout>
-	client_palallel_copy_default 10
+	client_palallel_copy 10
 </literallayout>
 </listitem>
 </varlistentry>
