--- a/gfarm_v2/trunk/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "26 March 2012" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "27 March 2012" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm configuration file
@@ -892,14 +892,14 @@ For example,
 	client_file_bufsize 65536
 .fi
 .TP
-\fBclient_parallel_copy_default \fInum-of-parallel\fB\fR
-This directive specifies the default number of parallel for \fBgfprep\fR and \fBgfpcopy\fR to work in parallel.
+\fBclient_parallel_copy \fInum-of-parallel\fB\fR
+This directive specifies the number of parallel for \fBgfprep\fR and \fBgfpcopy\fR to work in parallel.
 When this number is not specified, the default number of parallel is 4.
 
 For example,
 
 .nf
-	client_palallel_copy_default 10
+	client_palallel_copy 10
 .fi
 .TP
 \fBprofile \fIvalidity\fB\fR
