clarify wording of r6247

--- a/gfarm_v2/trunk/regress/README
+++ b/gfarm_v2/trunk/regress/README
@@ -27,8 +27,9 @@ i.e.
 - each test should clear the changes made by the test before exiting.
 - each test should be able to be executed simultaneously on multiple hosts
   and multiple "make check" on same host.
-- each test should not change/destroy filesystem contents and user, group,
-  host and fsngroup settings.
+- each test should preserve filesystem contents and user, group,
+  host and fsngroup settings.  although it's OK to change them temporarily
+  during the test.
 
 TODO
 - test by root?
