--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfarm2.conf.5'>
 
-<refentryinfo><date>10 Sep 2011</date></refentryinfo>
+<refentryinfo><date>26 June 2012</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm2.conf</refentrytitle>
@@ -964,6 +964,44 @@ The default time is 600 seconds, i.e. ten minutes.
 </varlistentry>
 
 <varlistentry>
+<term><token>schedule_concurrency</token> <parameter>number</parameter></term>
+<listitem>
+<para>
+This directive specifies the number how many filesystem nodes will be
+searched concurrently at filesystem scheduling.
+If this parameter is increased, the scheduling will finish quicker,
+but the load to filesystem nodes will increase.
+The default number is 10 nodes.
+</para>
+<para>For example,</para>
+<literallayout>
+	schedule_concurrency 10
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>schedule_concurrency_per_net</token> <parameter>number</parameter></term>
+<listitem>
+<para>
+This directive specifies the number how many filesystem nodes will
+be used in same network at measuring network latency
+for each network of filesystem nodes.
+It may be better to increase this parameter,
+if many filesystem nodes are stopping,
+or many filesystem nodes are under higher load.
+If this parameter is increased,
+it's recommened to increase schedule_concurrency parameter too.
+The default number is 3.
+</para>
+<para>For example,</para>
+<literallayout>
+	schedule_concurrency_per_net 3
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><token>schedule_idle_load_thresh</token> <parameter>load-average</parameter></term>
 <listitem>
 <para>This directive specifies the threshold of CPU load average to be
@@ -1005,6 +1043,44 @@ scheduling the same host multiple times.  The default load average is
 <para>For example,</para>
 <literallayout>
 	schedule_virtual_load 0.3
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>schedule_candidates_ratio</token> <parameter>ratio</parameter></term>
+<listitem>
+<para>
+This parameter specifies the threshold ratio of number of filesystem nodes
+from number of scheduling nodes,
+to decide to discontinue to search more filesystem nodes
+which load averages are less or equal to
+the schedule_busy_load_thresh parameter.
+If this parameter is increased,
+the accuracy of scheduling will be increased,
+but scheduling process will become slower.
+The default ratio is 4.0.
+</para>
+<para>For example,</para>
+<literallayout>
+	schedule_candidates_ratio 4.0
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>schedule_rtt_thresh</token> <parameter>ratio</parameter></term>
+<listitem>
+<para>
+This parameter specifies the threshold ratio of network latency
+which divides the domains of scheduling priority.
+If a network latency is larger than this ratio from nearer network,
+the network's scheduling priority is lowered.
+The default ratio is 4.0.
+</para>
+<para>For example,</para>
+<literallayout>
+	schedule_rtt_thresh 4.0
 </literallayout>
 </listitem>
 </varlistentry>
@@ -1538,9 +1614,13 @@ notation.</para>
 		&nbsp;&nbsp;&lt;local_user_map_statement&gt; |
 		&nbsp;&nbsp;&lt;local_group_map_statement&gt; |
 		&nbsp;&nbsp;&lt;schedule_cache_timeout_statement&gt; |
+		&nbsp;&nbsp;&lt;schedule_concurrency_statement&gt; |
+		&nbsp;&nbsp;&lt;schedule_concurrency_per_net_statement&gt; |
 		&nbsp;&nbsp;&lt;schedule_idle_load_thresh_statement&gt; |
 		&nbsp;&nbsp;&lt;schedule_busy_load_thresh_statement&gt; |
 		&nbsp;&nbsp;&lt;schedule_virtual_load_statement&gt; |
+		&nbsp;&nbsp;&lt;schedule_candidates_ratio_statement&gt; |
+		&nbsp;&nbsp;&lt;schedule_rtt_thresh_statement&gt; |
 <!--		&nbsp;&nbsp;&lt;write_local_priority_statement&gt; | -->
 <!--		&nbsp;&nbsp;&lt;write_target_domain_statement&gt; | -->
 		&nbsp;&nbsp;&lt;minimum_free_disk_space_statement&gt; |
@@ -1634,9 +1714,13 @@ notation.</para>
 <!--	&lt;dir_cache_timeout_statement&gt; ::=	"dir_cache_timeout" &lt;number&gt; -->
 <!--	&lt;host_cache_timeout_statement&gt; ::= "host_cache_timeout" &lt;number&gt; -->
 	&lt;schedule_cache_timeout_statement&gt; ::= "schedule_cache_timeout" &lt;number&gt;
+	&lt;schedule_concurrency_statement&gt; ::= "schedule_concurrency" &lt;number&gt;
+	&lt;schedule_concurrency_per_net_statement&gt; ::= "schedule_concurrency_per_net" &lt;number&gt;
 	&lt;schedule_idle_load_thresh_statement&gt; ::= "schedule_idle_load_thresh" &lt;load&gt;
 	&lt;schedule_busy_load_thresh_statement&gt; ::= "schedule_busy_load_thresh" &lt;load&gt;
 	&lt;schedule_virtual_load_statement&gt; ::= "schedule_virtual_load" &lt;load&gt;
+	&lt;schedule_candidates_ratio_statement&gt; ::= "schedule_candidates_ratio" &lt;floating_point_number&gt;
+	&lt;schedule_rtt_thresh__statement&gt; ::= "schedule_rtt_thresh" &lt;floating_point_number&gt;
 <!--	&lt;write_local_priority_statement&gt; ::= "write_local_priority" &lt;validity&gt; -->
 <!--	&lt;write_target_domain_statement&gt; ::= "write_target_domain" &lt;string&gt; -->
 	&lt;minimum_free_disk_space_statement&gt; ::=
