--- a/gfarm_v2/trunk/man/man1/gfjournaladmin.1
+++ b/gfarm_v2/trunk/man/man1/gfjournaladmin.1
@@ -3,17 +3,17 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFNOP-JOURNAL" "1" "26 June 2012" "Gfarm" ""
+.TH "GFJOURNALADMIN" "1" "28 June 2012" "Gfarm" ""
 
 .SH NAME
-gfnop-journal \- erase a particular record in a journal file
+gfjournaladmin \- erase a particular record in a journal file
 .SH SYNOPSIS
 
-\fBgfnop-journal\fR [ \fB\fIoptions\fB\fR ] \fB\fIjournal-file\fB\fR \fB\fIsequence-number\fB\fR
+\fBgfjournaladmin\fR [ \fB\fIoptions\fB\fR ] \fB\fIjournal-file\fB\fR \fB\fIsequence-number\fB\fR
 
 .SH "DESCRIPTION"
 .PP
-\fBgfnop-journal\fR erases a record with 
+\fBgfjournaladmin\fR erases a record with 
 \fIsequence-number\fR in a journal file.
 Since the record is replaced by A NOP (no operation) record with the
 same length, other records in the journal file are not moved or modified.
@@ -30,16 +30,16 @@ Such a conflict should not happen, but once it has been caused by a bug
 of gfmd, restarting gfmd never succeeds.
 Since gfmd applies journal data at boot time, it finds the conflict
 and aborts again.
-\fBgfnop-journal\fR command is used for getting out from
+\fBgfjournaladmin\fR command is used for getting out from
 the situation.  The log message shown above suggests a record with the 
 sequence number 938 causes a conflict.
 You can delete the record by executing:
 
 .nf
-	gfnop-journal /var/gfarm-metadata/journal/0000000000.gmj 938
+	gfjournaladmin /var/gfarm-metadata/journal/0000000000.gmj 938
 .fi
 .PP
-Note that \fBgfnop-journal\fR cannot erase a journal
+Note that \fBgfjournaladmin\fR cannot erase a journal
 record of BEGIN (operation ID 1) or END (operation ID 2).
 .SH "OPTIONS"
 .TP
